<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nayantiwari.quizapp.MainActivity">

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->

    <!--<EditText-->
    <!--android:id="@+id/editText"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:ems="10"-->
    <!--android:hint="Fill in the blank"-->
    <!--android:inputType="textCapWords" />-->

    <!--<TextView-->
    <!--android:id="@+id/whipped_text_view"-->
    <!--android:text="Some Text"-->
    <!--style="@style/HeaderTextStyles"/>-->

    <!--<CheckBox-->
    <!--android:id="@+id/checkBox1"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:checked="false"-->
    <!--android:onClick="changeCheckedValue"-->
    <!--android:paddingEnd="24dp"-->
    <!--android:paddingStart="24dp"-->
    <!--android:text="@string/whipped_cream"-->
    <!--android:textSize="16sp" />-->

    <!--<CheckBox-->
    <!--android:id="@+id/checkBox2"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:checked="false"-->
    <!--android:onClick="changeCheckedValue"-->
    <!--android:paddingEnd="24dp"-->
    <!--android:paddingStart="24dp"-->
    <!--android:text="@string/chocolate"-->
    <!--android:textSize="16sp" />-->

    <!--<TextView-->
    <!--android:id="@+id/textView1"-->
    <!--style="@style/HeaderTextStyles"-->
    <!--android:text="@string/quantity" />-->

    <!--<LinearLayout-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal">-->

    <!--<Button-->
    <!--android:id="@+id/button2"-->
    <!--style="@style/addSubButton"-->
    <!--android:onClick="removeNumberOfCoffees"-->
    <!--android:text="@string/minus" />-->

    <!--<TextView-->
    <!--android:id="@+id/quantity_text_view"-->
    <!--android:layout_width="match_parent"-->
    <!--style="@style/HeaderTextStyles"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:layout_marginRight="0dp"-->
    <!--android:text="@string/_0"-->
    <!--android:textColor="@android:color/black" />-->

    <!--<Button-->
    <!--android:id="@+id/button1"-->
    <!--style="@style/addSubButton"-->
    <!--android:onClick="addNumberOfCoffees"-->
    <!--android:text="@string/plus" />-->


    <!--</LinearLayout>-->

    <!--<Button-->
    <!--android:id="@+id/button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:layout_marginTop="16dp"-->
    <!--android:onClick="submitOrders"-->
    <!--android:text="@string/order"-->
    <!--android:textSize="16sp" />-->

    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyles"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1_a_sedan_can_have_how_many_number_of_seats" />

        <LinearLayout
            style="@style/TextStyles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                style="@style/TextStyles"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/checkBox1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1" />

            <CheckBox
                style="@style/TextStyles"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2" />

        </LinearLayout>

        <LinearLayout
            style="@style/TextStyles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox3"
                style="@style/TextStyles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textColor="@color/colorPrimaryDark" />

            <CheckBox
                style="@style/TextStyles"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4" />
        </LinearLayout>

        <TextView
            style="@style/TextStyles"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2_number_of_people_who_can_sit_on_a_bike_according_to_law" />

        <LinearLayout
            style="@style/TextStyles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                style="@style/TextStyles"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/checkBox5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1" />

            <CheckBox
                style="@style/TextStyles"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2" />

        </LinearLayout>

        <LinearLayout
            style="@style/TextStyles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                style="@style/TextStyles"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3" />

            <CheckBox
                style="@style/TextStyles"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4" />

        </LinearLayout>

        <TextView
            style="@style/TextStyles"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3_can_spiders_swim_in_water" />

        <RadioGroup
            style="@style/TextStyles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

                <RadioButton
                    style="@style/TextStyles"
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    style="@style/TextStyles"
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />

        </RadioGroup>

        <TextView
            style="@style/TextStyles"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4_who_is_the_first_president_in_the_united_states" />

        <EditText
            android:id="@+id/editText1"
            style="@style/TextStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_goes_here"
            android:inputType="textCapWords"/>

        <TextView
            style="@style/TextStyles"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5_this_logo_represents_which_american_university" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:src="@drawable/downtown1"
            android:scaleType="fitCenter"
            android:contentDescription="@string/asu_logo" />

        <EditText
            android:id="@+id/editText2"
            style="@style/TextStyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_goes_here"
            android:inputType="textCapWords"/>

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
           <Button
               android:layout_width="wrap_content"
               android:layout_height="48dp"
               android:text="@string/submit"
               android:textAllCaps="true"
               android:layout_alignParentBottom="true"
               android:layout_centerInParent="true"
               android:onClick="checkAnswers"/>
       </RelativeLayout>

    </LinearLayout>
</ScrollView>